--- a/index.html
+++ b/index.html
@@ -333,8 +333,9 @@
   ];
 
   function getLib(){
-    const custom = Array.isArray(mem.customLib) ? mem.customLib : [];
-    return BASE_LIB.concat(custom);// ============================
+  const custom = Array.isArray(mem.customLib) ? mem.customLib : [];
+  return BASE_LIB.concat(BACKFILL_LIB).concat(custom);
+};// ============================
 // BACKFILL LIB (200+ more picks)
 // ============================
 const BACKFILL_LIB = [
